--- a/contato.html
+++ b/contato.html
@@ -10,18 +10,18 @@
             <style>
                 @import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
                 #logo {
-                    background-image: url("/static/img/logo.svg");
+                    background-image: url("static/img/logo.svg");
                     background-size: cover;
                     cursor: pointer;
                 }
                 #hamburger {
-                    background: url("/static/img/hamburger.svg");
+                    background: url("static/img/hamburger.svg");
                 }
                 #x {
-                    background: url("/static/img/x.svg");
+                    background: url("static/img/x.svg");
                 }
                 #footer {
-                    background: url("/static/img/footer-bg.svg");
+                    background: url("static/img/footer-bg.svg");
                     background-size: cover;
                     background-position: top;
                     margin-top: -100px !important;
@@ -32,7 +32,7 @@
   </head>
   <body>
                 <div id="scroll-menu" class="hide-scroll-menu">
-                <img src="/static/img/logo3.svg" onclick="javascript:location.href = '/'" />
+                <img src="static/img/logo3.svg" onclick="javascript:location.href = '/'" />
                 <div class="horizontal-menu">
                 <a href="index.html">Início</a>
 <a href="quem-somos.html">Quem Somos</a>
@@ -58,9 +58,9 @@
     
     
     </div>
-    <div id="instagram-btn" onclick="javascript:window.open('https://instagram.com/lemae.iq.ufrj', '_blank');" style="background: url('/static/img/instagram.svg');
+    <div id="instagram-btn" onclick="javascript:window.open('https://instagram.com/lemae.iq.ufrj', '_blank');" style="background: url('static/img/instagram.svg');
     background-size: cover"></div>
-    <div id="linkedin-btn" onclick="javascript:window.open('https://www.linkedin.com/in/lemae-iq-ufrj-2a7199274', '_blank');" style="background: url('/static/img/linkedin.svg'); background-size: cover"></div>
+    <div id="linkedin-btn" onclick="javascript:window.open('https://www.linkedin.com/in/lemae-iq-ufrj-2a7199274', '_blank');" style="background: url('static/img/linkedin.svg'); background-size: cover"></div>
     <div id="lattes-btn" onclick="javascript:window.open('https://dgp.cnpq.br/dgp/espelhogrupo/3728441585416976', '_blank');">DGP CNPq</div>
 </div>
     </div>
@@ -124,7 +124,7 @@
         <br><br>
         <button class="s-button" onclick="javascript:location.href = '/contato'">FALE COM A GENTE</button>
         <div class="info">
-            <img src="/static/img/logo2.svg">
+            <img src="static/img/logo2.svg">
             <p>Todos os direitos reservados © 2022</p>
         </div>
     </div>
