--- a/index.html
+++ b/index.html
@@ -92,20 +92,20 @@
                 <p class="text">
                     O Laboratório de Estudos para o Meio Ambiente e Energia do Instituto de Química da Universidade Federal do Rio de Janeiro (LEMAE-IQ/UFRJ) iniciou suas atividades em junho de 2010, possui registro no Diretório de Grupos de Pesquisa do CNPq e é credenciado na ANP. As pesquisas do grupo têm como foco o desenvolvimento de produtos, materiais e processos limpos, a partir do uso de matérias-primas sustentáveis.
                 </p>
-                <button class="p-button" onclick="javascript:location.href = '/quem-somos'" style="display: block; margin: 30px auto 0;">SAIBA MAIS SOBRE O LABORATÓRIO</button>
+                <button class="p-button" onclick="javascript:location.href = 'quem-somos.html'" style="display: block; margin: 30px auto 0;">SAIBA MAIS SOBRE O LABORATÓRIO</button>
             </div>
         </section>
         <section id="home-cards">
             <div class="content">
                 <div class="l1">
-                    <div class="home-card c1" onclick="javascript:location.href = '/linhas-de-pesquisa'">
+                    <div class="home-card c1" onclick="javascript:location.href = 'linhas-de-pesquisa.html'">
                         <div class="card-content">
                             <h3 class="subtitle">Linhas de Pesquisa</h3>
                             <img class="icon" src="static/img/lupa.svg">
                             <h4 class="subsubtitle">CONHEÇA NOSSAS LINHAS DE PESQUISA</h4>
                         </div>
                     </div>
-                    <div class="home-card c2" onclick="javascript:location.href = '/producao-cientifica'>
+                    <div class="home-card c2" onclick="javascript:location.href = 'producao-cientifica.html'>
                         <div class="card-content"">
                             <h3 class="subtitle">Produção Científica</h3>
                             <h4 class="subsubtitle">VEJA NOSSAS PRODUÇÕES</h4>
@@ -113,14 +113,14 @@
                         </div>
                     </div>
                     <div class="l2">
-                        <div class="home-card c3" onclick="javascript:location.href = '/infraestrutura'">
+                        <div class="home-card c3" onclick="javascript:location.href = 'infraestrutura.html'">
                             <div class="card-content">
                                 <h3 class="subtitle">Infraestrutura</h3>
                                 <img class="icon" src="static/img/predio.svg">
                                 <h4 class="subsubtitle">CONHEÇA O LABORATÓRIO</h4>
                             </div>
                         </div>
-                        <div class="home-card c4" onclick="javascript:location.href = '/parceiros'">
+                        <div class="home-card c4" onclick="javascript:location.href = 'parceiros.html'">
                             <div class="card-content">
                                 <h3 class="subtitle">Parceiros</h3>
                                 <img class="icon" style="margin-top: 10px;" src="static/img/user.svg">
